force-app/main/default/objects/Bitbucket_Credentials__c/Bitbucket_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Protected custom setting for storing Bitbucket authentication credentials securely</description>
    <label>Bitbucket Credentials</label>
</CustomObject>