force-app/main/default/objects/Bitbucket_Credentials__c/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <description>Bitbucket App Password or Personal Access Token for API authentication</description>
    <inlineHelpText>Enter your Bitbucket App Password or Personal Access Token. To create one, go to Bitbucket Settings &gt; App passwords.</inlineHelpText>
    <label>API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>