force-app/main/default/objects/Bitbucket_Credentials__c/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <description>Additional encryption key for extra security (if implemented)</description>
    <inlineHelpText>Additional encryption key for encrypting sensitive data at rest</inlineHelpText>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>