force-app/main/default/objects/Bitbucket_Credentials__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if these credentials are currently active</description>
    <inlineHelpText>Uncheck to temporarily disable these credentials without deleting them</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>