force-app/main/default/objects/Bitbucket_Credentials__c/fields/Last_Authentication_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Authentication_Date__c</fullName>
    <description>Date and time of the last successful authentication</description>
    <inlineHelpText>Timestamp of the last successful authentication with Bitbucket</inlineHelpText>
    <label>Last Authentication Date</label>
    <type>DateTime</type>
</CustomField>