force-app/main/default/objects/Bitbucket_Credentials__c/fields/OAuth_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Access_Token__c</fullName>
    <description>OAuth 2.0 Access Token (if using OAuth authentication)</description>
    <inlineHelpText>OAuth 2.0 Access Token obtained through OAuth flow</inlineHelpText>
    <label>OAuth Access Token</label>
    <type>TextArea</type>
</CustomField>