force-app/main/default/objects/Bitbucket_Credentials__c/fields/OAuth_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Secret__c</fullName>
    <description>OAuth 2.0 Client Secret for Bitbucket OAuth authentication</description>
    <inlineHelpText>OAuth 2.0 Client Secret from your Bitbucket OAuth consumer settings</inlineHelpText>
    <label>OAuth Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>