force-app/main/default/objects/Bitbucket_Credentials__c/fields/OAuth_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Refresh_Token__c</fullName>
    <description>OAuth 2.0 Refresh Token for token renewal</description>
    <inlineHelpText>OAuth 2.0 Refresh Token for automatic token renewal</inlineHelpText>
    <label>OAuth Refresh Token</label>
    <type>TextArea</type>
</CustomField>