force-app/main/default/objects/Bitbucket_Credentials__c/fields/Repository_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Repository_Access_Token__c</fullName>
    <description>Repository-specific access token for Bitbucket authentication</description>
    <inlineHelpText>Enter your Repository Access Token if using repository-specific authentication. This can be created in your repository settings.</inlineHelpText>
    <label>Repository Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>