force-app/main/default/objects/Bitbucket_Credentials__c/fields/SSH_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>SSH_Private_Key__c</fullName>
    <description>SSH Private Key for Git operations (if needed)</description>
    <inlineHelpText>SSH Private Key for Git operations. Store the full private key including BEGIN and END markers.</inlineHelpText>
    <label>SSH Private Key</label>
    <type>TextArea</type>
</CustomField>