force-app/main/default/objects/Bitbucket_Credentials__c/fields/Token_Expiry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_DateTime__c</fullName>
    <description>DateTime when the current OAuth token expires</description>
    <inlineHelpText>DateTime when the OAuth access token expires and needs to be refreshed</inlineHelpText>
    <label>Token Expiry DateTime</label>
    <type>DateTime</type>
</CustomField>