force-app/main/default/objects/Bitbucket_Credentials__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Bitbucket username for Basic Authentication (if needed)</description>
    <inlineHelpText>Your Bitbucket username (only needed for Basic Authentication)</inlineHelpText>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>