force-app/main/default/objects/Bitbucket_Credentials__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Secret key for validating Bitbucket webhooks</description>
    <inlineHelpText>Secret key used to validate incoming webhooks from Bitbucket</inlineHelpText>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>